centered math button symbols and fixed alignment issues

--- a/Day-II-Calculator/calculator/src/components/ButtonComponents/Button.css
+++ b/Day-II-Calculator/calculator/src/components/ButtonComponents/Button.css
@@ -1,8 +1,12 @@
 
 .button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border: 1px solid grey;
   padding: 3.8% 10.3%;
-  min-width: 4%;
+  min-width: 3%;
   max-width: 4%;
   font-size: 47px;
+  text-align: center;
 }
